Added search for users site and api calls