@@ -5,13 +5,13 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
+import razepl.dev.socialappbackend.entities.friend.FriendsRepository;
 import razepl.dev.socialappbackend.entities.user.User;
 import razepl.dev.socialappbackend.entities.user.interfaces.UserRepository;
-import razepl.dev.socialappbackend.home.data.FriendData;
+import razepl.dev.socialappbackend.search.data.UserSearchData;
 import razepl.dev.socialappbackend.search.interfaces.SearchServiceInterface;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -19,9 +19,10 @@ import java.util.stream.Collectors;
 public class SearchService implements SearchServiceInterface {
     private static final int PAGE_SIZE = 100;
     private final UserRepository userRepository;
+    private final FriendsRepository friendsRepository;
 
     @Override
-    public final List<FriendData> getListOfUserBasedOnPattern(String pattern, int numOfSite) {
+    public final List<UserSearchData> getListOfUserBasedOnPattern(String pattern, int numOfSite, User user) {
         Pageable pageable = Pageable.ofSize(PAGE_SIZE).withPage(numOfSite);
         Page<User> users = userRepository.findAllByPattern(pattern, pageable);
 
@@ -29,13 +30,14 @@ public class SearchService implements SearchServiceInterface {
 
         return users
                 .stream()
-                .map(usr -> FriendData
+                .map(usr -> UserSearchData
                         .builder()
-                        .friendUsername(usr.getUsername())
-                        .friendFullName(usr.getFullName())
-                        .friendJob(convertNullIntoEmptyString(usr.getJob()))
+                        .username(usr.getUsername())
+                        .fullName(usr.getFullName())
+                        .job(convertNullIntoEmptyString(usr.getJob()))
+                        .isUsersFriend(friendsRepository.findByFriendUsernameAndUser(usr.getUsername(), user).isPresent())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private String convertNullIntoEmptyString(String value) {
